[gd_scene load_steps=108 format=3 uid="uid://basr3dbkhp25y"]

[ext_resource type="Script" uid="uid://cxjqp0fns8fgp" path="res://creat_h.gd" id="1_l0b75"]
[ext_resource type="Texture2D" uid="uid://cxionuf71yfdn" path="res://asset/creat/000002.png" id="1_vvv5p"]
[ext_resource type="AudioStream" uid="uid://bh86vjcoujuwu" path="res://asset/creat/selsvr.wav" id="3_3m77j"]
[ext_resource type="Texture2D" uid="uid://lhnrhoun2m2r" path="res://asset/creat/daoshi/000120.png" id="4_3c6uf"]
[ext_resource type="Texture2D" uid="uid://31hfg7d7ok0p" path="res://asset/creat/zhanshiA/000040.png" id="4_ppwrw"]
[ext_resource type="Texture2D" uid="uid://xr83rqc215ey" path="res://asset/creat/daoshi/000121.png" id="5_pyilr"]
[ext_resource type="Texture2D" uid="uid://b4tl8pnjoq81q" path="res://asset/creat/zhanshiA/000041.png" id="5_u4jf8"]
[ext_resource type="Texture2D" uid="uid://dryrfx0ktk5lf" path="res://asset/creat/zhanshiA/000042.png" id="6_523rx"]
[ext_resource type="Texture2D" uid="uid://qdud4a4klcew" path="res://asset/creat/daoshi/000122.png" id="6_p7ogv"]
[ext_resource type="Texture2D" uid="uid://l5tjiniyhiad" path="res://asset/creat/daoshi/000123.png" id="7_64d57"]
[ext_resource type="Texture2D" uid="uid://dn1slt0rrcs85" path="res://asset/creat/zhanshiA/000043.png" id="7_c0wi2"]
[ext_resource type="Texture2D" uid="uid://ci8jhpfv0nt2t" path="res://asset/creat/zhanshiA/000044.png" id="8_o1wqi"]
[ext_resource type="Texture2D" uid="uid://csqwkl8qsly2g" path="res://asset/creat/daoshi/000124.png" id="8_pdbxi"]
[ext_resource type="Texture2D" uid="uid://bg3k55kujuyoj" path="res://asset/creat/daoshi/000125.png" id="9_8siee"]
[ext_resource type="Texture2D" uid="uid://yyixmc637fpy" path="res://asset/creat/zhanshiA/000045.png" id="9_w1v5s"]
[ext_resource type="Texture2D" uid="uid://dox6e614f4pag" path="res://asset/creat/zhanshiA/000046.png" id="10_jsuci"]
[ext_resource type="Texture2D" uid="uid://dhpn0f8xncsjn" path="res://asset/creat/daoshi/000126.png" id="10_png1k"]
[ext_resource type="Texture2D" uid="uid://c173ccdhihu5a" path="res://asset/creat/zhanshiA/000047.png" id="11_oaffa"]
[ext_resource type="Texture2D" uid="uid://uxij71cfkpco" path="res://asset/creat/daoshi/000127.png" id="11_s2bkd"]
[ext_resource type="Texture2D" uid="uid://c2kd624qewq5u" path="res://asset/creat/zhanshiA/000048.png" id="12_6jd4e"]
[ext_resource type="Texture2D" uid="uid://coggs4u68d1cn" path="res://asset/creat/daoshi/000128.png" id="12_p8rjc"]
[ext_resource type="Texture2D" uid="uid://bj3ccsb2vcgql" path="res://asset/creat/zhanshiA/000049.png" id="13_1bu1e"]
[ext_resource type="Texture2D" uid="uid://c8rqdjm2ar827" path="res://asset/creat/daoshi/000129.png" id="13_488g8"]
[ext_resource type="Texture2D" uid="uid://cpupg70qe8tfa" path="res://asset/creat/zhanshiA/000050.png" id="14_pqr1a"]
[ext_resource type="Texture2D" uid="uid://bk6cdlwoxkafd" path="res://asset/creat/daoshi/000130.png" id="14_ut71h"]
[ext_resource type="Texture2D" uid="uid://bl0y3sb4kmps2" path="res://asset/creat/zhanshiA/000051.png" id="15_6wny2"]
[ext_resource type="Texture2D" uid="uid://dbat4404jtepi" path="res://asset/creat/daoshi/000131.png" id="15_b04fe"]
[ext_resource type="Texture2D" uid="uid://h2o38dd4u7v" path="res://asset/creat/daoshi/000132.png" id="16_37p2g"]
[ext_resource type="Texture2D" uid="uid://cdv1rfjgjcxqy" path="res://asset/creat/zhanshiA/000052.png" id="16_r03du"]
[ext_resource type="Texture2D" uid="uid://rwmpamwbqubp" path="res://asset/creat/daoshi/000133.png" id="17_6pryk"]
[ext_resource type="Texture2D" uid="uid://b4c1m0wynbpbq" path="res://asset/creat/zhanshiA/000053.png" id="17_yifur"]
[ext_resource type="Texture2D" uid="uid://druo4b6lde76t" path="res://asset/creat/daoshi/000134.png" id="18_0h8b7"]
[ext_resource type="Texture2D" uid="uid://dgsfls1dy6e3a" path="res://asset/creat/zhanshiA/000054.png" id="18_v7cph"]
[ext_resource type="Texture2D" uid="uid://bnqcurej3n3qs" path="res://asset/creat/daoshi/000135.png" id="19_e8t3a"]
[ext_resource type="Texture2D" uid="uid://c3gwqj77bdppt" path="res://asset/creat/zhanshiA/000055.png" id="19_pphqt"]
[ext_resource type="Texture2D" uid="uid://c5sbka6nk00bm" path="res://asset/creat/fashi/000080.png" id="20_fm16q"]
[ext_resource type="Texture2D" uid="uid://dorq4xbuvwig5" path="res://asset/creat/000068.png" id="20_u4jf8"]
[ext_resource type="Texture2D" uid="uid://cbh43mogkdw3d" path="res://asset/creat/000069.png" id="21_523rx"]
[ext_resource type="Texture2D" uid="uid://fecoc63d06d1" path="res://asset/creat/fashi/000081.png" id="21_vt7gs"]
[ext_resource type="Texture2D" uid="uid://crrvsulncaox0" path="res://asset/creat/000073.png" id="22_c0wi2"]
[ext_resource type="Texture2D" uid="uid://ohhvfwe15srd" path="res://asset/creat/fashi/000082.png" id="22_ivwub"]
[ext_resource type="Texture2D" uid="uid://cmrxfcpwqb7qo" path="res://asset/creat/000055.png" id="23_6jd4e"]
[ext_resource type="Texture2D" uid="uid://bkr680sx6412g" path="res://asset/creat/fashi/000083.png" id="23_jxr4y"]
[ext_resource type="Texture2D" uid="uid://bcw6jmn1cswv5" path="res://asset/creat/fashi/000084.png" id="24_kn1mq"]
[ext_resource type="Texture2D" uid="uid://b0hb4qsxq47dx" path="res://asset/creat/000057.png" id="25_pqr1a"]
[ext_resource type="Texture2D" uid="uid://c1bluaaac7vuc" path="res://asset/creat/fashi/000085.png" id="25_yb6qr"]
[ext_resource type="Texture2D" uid="uid://cug40elxk8d7c" path="res://asset/creat/000058.png" id="26_6wny2"]
[ext_resource type="Texture2D" uid="uid://c2hd6b70yuk3w" path="res://asset/creat/fashi/000086.png" id="26_r35gn"]
[ext_resource type="Texture2D" uid="uid://c4hbqpfv1lr5c" path="res://asset/creat/fashi/000087.png" id="27_igdyr"]
[ext_resource type="Texture2D" uid="uid://oln23huwaxd5" path="res://asset/creat/000062.png" id="27_r03du"]
[ext_resource type="Texture2D" uid="uid://dlavjulpkn3vo" path="res://asset/creat/fashi/000088.png" id="28_58boa"]
[ext_resource type="Texture2D" uid="uid://wbetd1mohnfm" path="res://asset/creat/fashi/000089.png" id="29_bn8kp"]
[ext_resource type="Texture2D" uid="uid://dkntt7gbhseum" path="res://asset/creat/fashi/000090.png" id="30_prpxv"]
[ext_resource type="Texture2D" uid="uid://bclmfttvta2u2" path="res://asset/creat/fashi/000091.png" id="31_578mm"]
[ext_resource type="Texture2D" uid="uid://q5b84exan5yx" path="res://asset/creat/fashi/000092.png" id="32_pr4y3"]
[ext_resource type="Texture2D" uid="uid://cmykk4muc4tpt" path="res://asset/creat/fashi/000093.png" id="33_chrt3"]
[ext_resource type="Texture2D" uid="uid://6452vh4s8tvs" path="res://asset/creat/fashi/000094.png" id="34_xkgrl"]
[ext_resource type="Texture2D" uid="uid://clgfkg2vl21qf" path="res://asset/creat/fashi/000095.png" id="35_04mw2"]
[ext_resource type="Texture2D" uid="uid://b5dhi61f32xae" path="res://asset/creat/womanDaoshi/000240.png" id="36_ug3n3"]
[ext_resource type="Texture2D" uid="uid://c8nrj1kiifr3w" path="res://asset/creat/womanDaoshi/000241.png" id="37_n6kou"]
[ext_resource type="Texture2D" uid="uid://vwvgx7k537x7" path="res://asset/creat/womanDaoshi/000242.png" id="38_q37sk"]
[ext_resource type="Texture2D" uid="uid://qkt6lj2gm12s" path="res://asset/creat/womanDaoshi/000243.png" id="39_q51rw"]
[ext_resource type="Texture2D" uid="uid://x46n2h87ue61" path="res://asset/creat/womanDaoshi/000244.png" id="40_gwjk2"]
[ext_resource type="Texture2D" uid="uid://j8js2rctymqh" path="res://asset/creat/womanDaoshi/000245.png" id="41_tqvmo"]
[ext_resource type="Texture2D" uid="uid://bdrny0mkdkwfm" path="res://asset/creat/womanDaoshi/000246.png" id="42_7xocd"]
[ext_resource type="Texture2D" uid="uid://v2gr830jnv8h" path="res://asset/creat/womanDaoshi/000247.png" id="43_12rnw"]
[ext_resource type="Texture2D" uid="uid://tnvkyxlr8gwh" path="res://asset/creat/womanDaoshi/000248.png" id="44_belfm"]
[ext_resource type="Texture2D" uid="uid://hmoi05vjow3x" path="res://asset/creat/womanDaoshi/000249.png" id="45_0uy31"]
[ext_resource type="Texture2D" uid="uid://ceb002bmn4ssx" path="res://asset/creat/womanDaoshi/000250.png" id="46_xbk0q"]
[ext_resource type="Texture2D" uid="uid://40der07u0747" path="res://asset/creat/womanDaoshi/000251.png" id="47_lll7x"]
[ext_resource type="Texture2D" uid="uid://btuf7g7lr02aw" path="res://asset/creat/womanDaoshi/000252.png" id="48_5a16w"]
[ext_resource type="Texture2D" uid="uid://7wvdtwmcaab1" path="res://asset/creat/womanDaoshi/000253.png" id="49_1rvwu"]
[ext_resource type="Texture2D" uid="uid://by363e64y2x3u" path="res://asset/creat/womanDaoshi/000254.png" id="50_bmwy1"]
[ext_resource type="Texture2D" uid="uid://b7r6s0tscykbm" path="res://asset/creat/womanDaoshi/000255.png" id="51_dobgr"]
[ext_resource type="Texture2D" uid="uid://dussjs1n28sxe" path="res://asset/creat/womanFashi/000200.png" id="52_mtqyr"]
[ext_resource type="Texture2D" uid="uid://lvqw8glca04k" path="res://asset/creat/womanFashi/000201.png" id="53_gdil4"]
[ext_resource type="Texture2D" uid="uid://nhkxfii5akod" path="res://asset/creat/womanFashi/000202.png" id="54_17b4s"]
[ext_resource type="Texture2D" uid="uid://d0qlosdrre6pd" path="res://asset/creat/womanFashi/000203.png" id="55_ui5hm"]
[ext_resource type="Texture2D" uid="uid://bo4skk5t7u6ii" path="res://asset/creat/womanFashi/000204.png" id="56_d6k12"]
[ext_resource type="Texture2D" uid="uid://va72el8mxgjf" path="res://asset/creat/womanFashi/000205.png" id="57_4ve2c"]
[ext_resource type="Texture2D" uid="uid://cx5wfevuoh7x7" path="res://asset/creat/womanFashi/000206.png" id="58_5ojxb"]
[ext_resource type="Texture2D" uid="uid://bkeh25e7o2iol" path="res://asset/creat/womanFashi/000207.png" id="59_m5hsn"]
[ext_resource type="Texture2D" uid="uid://yxydngt4g505" path="res://asset/creat/womanFashi/000208.png" id="60_q1fua"]
[ext_resource type="Texture2D" uid="uid://d36js60ccnkkq" path="res://asset/creat/womanFashi/000209.png" id="61_by228"]
[ext_resource type="Texture2D" uid="uid://b82e2dorxhay3" path="res://asset/creat/womanFashi/000210.png" id="62_q40ar"]
[ext_resource type="Texture2D" uid="uid://epsrvwix1lxw" path="res://asset/creat/womanFashi/000211.png" id="63_okjmf"]
[ext_resource type="Texture2D" uid="uid://cp2m0kscl0sq8" path="res://asset/creat/womanFashi/000212.png" id="64_vco4g"]
[ext_resource type="Texture2D" uid="uid://ctjcg3w30l1ue" path="res://asset/creat/womanFashi/000213.png" id="65_yktsk"]
[ext_resource type="Texture2D" uid="uid://3xtcx4uqml4n" path="res://asset/creat/womanFashi/000214.png" id="66_ndtnv"]
[ext_resource type="Texture2D" uid="uid://b2phg1swdyf4l" path="res://asset/creat/womanFashi/000215.png" id="67_fc24r"]
[ext_resource type="Texture2D" uid="uid://bdkoy4nn75k3p" path="res://asset/creat/womanZhanshi/000160.png" id="68_3eqks"]
[ext_resource type="Texture2D" uid="uid://d2rsed7lkivyt" path="res://asset/creat/womanZhanshi/000161.png" id="69_ulpu8"]
[ext_resource type="Texture2D" uid="uid://dik7lep2xkpix" path="res://asset/creat/womanZhanshi/000162.png" id="70_t04ll"]
[ext_resource type="Texture2D" uid="uid://ddriu5ef2xhfg" path="res://asset/creat/womanZhanshi/000163.png" id="71_4o4sk"]
[ext_resource type="Texture2D" uid="uid://bbcfpytiaucrr" path="res://asset/creat/womanZhanshi/000164.png" id="72_7075b"]
[ext_resource type="Texture2D" uid="uid://bqowgojodo3kj" path="res://asset/creat/womanZhanshi/000165.png" id="73_4q2si"]
[ext_resource type="Texture2D" uid="uid://txfe0d30thkj" path="res://asset/creat/womanZhanshi/000166.png" id="74_lsb5d"]
[ext_resource type="Texture2D" uid="uid://bekpt6t8muyrc" path="res://asset/creat/womanZhanshi/000167.png" id="75_q7eic"]
[ext_resource type="Texture2D" uid="uid://biml6530eurnw" path="res://asset/creat/womanZhanshi/000168.png" id="76_x11ot"]
[ext_resource type="Texture2D" uid="uid://dspmiftxxyfmm" path="res://asset/creat/womanZhanshi/000169.png" id="77_sxqmd"]
[ext_resource type="Texture2D" uid="uid://b3dumq2or0x33" path="res://asset/creat/womanZhanshi/000170.png" id="78_fqh1c"]
[ext_resource type="Texture2D" uid="uid://dh7nx2lw0pqfn" path="res://asset/creat/womanZhanshi/000171.png" id="79_d6p72"]
[ext_resource type="Texture2D" uid="uid://d20nrnhv6j3vt" path="res://asset/creat/womanZhanshi/000172.png" id="80_eq4os"]
[ext_resource type="Texture2D" uid="uid://b6iilkvsyd8ev" path="res://asset/creat/womanZhanshi/000173.png" id="81_m7afw"]
[ext_resource type="Texture2D" uid="uid://bctsd5iyuk66p" path="res://asset/creat/womanZhanshi/000174.png" id="82_w8dql"]
[ext_resource type="Texture2D" uid="uid://dqh8hqwavvkr7" path="res://asset/creat/womanZhanshi/000175.png" id="83_p0yi6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fglmq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3c6uf")
}, {
"duration": 1.0,
"texture": ExtResource("5_pyilr")
}, {
"duration": 1.0,
"texture": ExtResource("6_p7ogv")
}, {
"duration": 1.0,
"texture": ExtResource("7_64d57")
}, {
"duration": 1.0,
"texture": ExtResource("8_pdbxi")
}, {
"duration": 1.0,
"texture": ExtResource("9_8siee")
}, {
"duration": 1.0,
"texture": ExtResource("10_png1k")
}, {
"duration": 1.0,
"texture": ExtResource("11_s2bkd")
}, {
"duration": 1.0,
"texture": ExtResource("12_p8rjc")
}, {
"duration": 1.0,
"texture": ExtResource("13_488g8")
}, {
"duration": 1.0,
"texture": ExtResource("14_ut71h")
}, {
"duration": 1.0,
"texture": ExtResource("15_b04fe")
}, {
"duration": 1.0,
"texture": ExtResource("16_37p2g")
}, {
"duration": 1.0,
"texture": ExtResource("17_6pryk")
}, {
"duration": 1.0,
"texture": ExtResource("18_0h8b7")
}, {
"duration": 1.0,
"texture": ExtResource("19_e8t3a")
}],
"loop": true,
"name": &"daoshi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_fm16q")
}, {
"duration": 1.0,
"texture": ExtResource("21_vt7gs")
}, {
"duration": 1.0,
"texture": ExtResource("22_ivwub")
}, {
"duration": 1.0,
"texture": ExtResource("23_jxr4y")
}, {
"duration": 1.0,
"texture": ExtResource("24_kn1mq")
}, {
"duration": 1.0,
"texture": ExtResource("25_yb6qr")
}, {
"duration": 1.0,
"texture": ExtResource("26_r35gn")
}, {
"duration": 1.0,
"texture": ExtResource("27_igdyr")
}, {
"duration": 1.0,
"texture": ExtResource("28_58boa")
}, {
"duration": 1.0,
"texture": ExtResource("29_bn8kp")
}, {
"duration": 1.0,
"texture": ExtResource("30_prpxv")
}, {
"duration": 1.0,
"texture": ExtResource("31_578mm")
}, {
"duration": 1.0,
"texture": ExtResource("32_pr4y3")
}, {
"duration": 1.0,
"texture": ExtResource("33_chrt3")
}, {
"duration": 1.0,
"texture": ExtResource("34_xkgrl")
}, {
"duration": 1.0,
"texture": ExtResource("35_04mw2")
}],
"loop": true,
"name": &"fashi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_ug3n3")
}, {
"duration": 1.0,
"texture": ExtResource("37_n6kou")
}, {
"duration": 1.0,
"texture": ExtResource("38_q37sk")
}, {
"duration": 1.0,
"texture": ExtResource("39_q51rw")
}, {
"duration": 1.0,
"texture": ExtResource("40_gwjk2")
}, {
"duration": 1.0,
"texture": ExtResource("41_tqvmo")
}, {
"duration": 1.0,
"texture": ExtResource("42_7xocd")
}, {
"duration": 1.0,
"texture": ExtResource("43_12rnw")
}, {
"duration": 1.0,
"texture": ExtResource("44_belfm")
}, {
"duration": 1.0,
"texture": ExtResource("45_0uy31")
}, {
"duration": 1.0,
"texture": ExtResource("46_xbk0q")
}, {
"duration": 1.0,
"texture": ExtResource("47_lll7x")
}, {
"duration": 1.0,
"texture": ExtResource("48_5a16w")
}, {
"duration": 1.0,
"texture": ExtResource("49_1rvwu")
}, {
"duration": 1.0,
"texture": ExtResource("50_bmwy1")
}, {
"duration": 1.0,
"texture": ExtResource("51_dobgr")
}],
"loop": true,
"name": &"womanDaoshi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("52_mtqyr")
}, {
"duration": 1.0,
"texture": ExtResource("53_gdil4")
}, {
"duration": 1.0,
"texture": ExtResource("54_17b4s")
}, {
"duration": 1.0,
"texture": ExtResource("55_ui5hm")
}, {
"duration": 1.0,
"texture": ExtResource("56_d6k12")
}, {
"duration": 1.0,
"texture": ExtResource("57_4ve2c")
}, {
"duration": 1.0,
"texture": ExtResource("58_5ojxb")
}, {
"duration": 1.0,
"texture": ExtResource("59_m5hsn")
}, {
"duration": 1.0,
"texture": ExtResource("60_q1fua")
}, {
"duration": 1.0,
"texture": ExtResource("61_by228")
}, {
"duration": 1.0,
"texture": ExtResource("62_q40ar")
}, {
"duration": 1.0,
"texture": ExtResource("63_okjmf")
}, {
"duration": 1.0,
"texture": ExtResource("64_vco4g")
}, {
"duration": 1.0,
"texture": ExtResource("65_yktsk")
}, {
"duration": 1.0,
"texture": ExtResource("66_ndtnv")
}, {
"duration": 1.0,
"texture": ExtResource("67_fc24r")
}],
"loop": true,
"name": &"womanFashi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("68_3eqks")
}, {
"duration": 1.0,
"texture": ExtResource("69_ulpu8")
}, {
"duration": 1.0,
"texture": ExtResource("70_t04ll")
}, {
"duration": 1.0,
"texture": ExtResource("71_4o4sk")
}, {
"duration": 1.0,
"texture": ExtResource("72_7075b")
}, {
"duration": 1.0,
"texture": ExtResource("73_4q2si")
}, {
"duration": 1.0,
"texture": ExtResource("74_lsb5d")
}, {
"duration": 1.0,
"texture": ExtResource("75_q7eic")
}, {
"duration": 1.0,
"texture": ExtResource("76_x11ot")
}, {
"duration": 1.0,
"texture": ExtResource("77_sxqmd")
}, {
"duration": 1.0,
"texture": ExtResource("78_fqh1c")
}, {
"duration": 1.0,
"texture": ExtResource("79_d6p72")
}, {
"duration": 1.0,
"texture": ExtResource("80_eq4os")
}, {
"duration": 1.0,
"texture": ExtResource("81_m7afw")
}, {
"duration": 1.0,
"texture": ExtResource("82_w8dql")
}, {
"duration": 1.0,
"texture": ExtResource("83_p0yi6")
}],
"loop": true,
"name": &"womanZhanshi",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ppwrw")
}, {
"duration": 1.0,
"texture": ExtResource("5_u4jf8")
}, {
"duration": 1.0,
"texture": ExtResource("6_523rx")
}, {
"duration": 1.0,
"texture": ExtResource("7_c0wi2")
}, {
"duration": 1.0,
"texture": ExtResource("8_o1wqi")
}, {
"duration": 1.0,
"texture": ExtResource("9_w1v5s")
}, {
"duration": 1.0,
"texture": ExtResource("10_jsuci")
}, {
"duration": 1.0,
"texture": ExtResource("11_oaffa")
}, {
"duration": 1.0,
"texture": ExtResource("12_6jd4e")
}, {
"duration": 1.0,
"texture": ExtResource("13_1bu1e")
}, {
"duration": 1.0,
"texture": ExtResource("14_pqr1a")
}, {
"duration": 1.0,
"texture": ExtResource("15_6wny2")
}, {
"duration": 1.0,
"texture": ExtResource("16_r03du")
}, {
"duration": 1.0,
"texture": ExtResource("17_yifur")
}, {
"duration": 1.0,
"texture": ExtResource("18_v7cph")
}, {
"duration": 1.0,
"texture": ExtResource("19_pphqt")
}],
"loop": true,
"name": &"zhanshi",
"speed": 5.0
}]

[node name="creatH" type="Node2D"]
script = ExtResource("1_l0b75")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(645, 319)
scale = Vector2(1.6025, 1.02667)
texture = ExtResource("1_vvv5p")

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="Selsvr" type="AudioStreamPlayer" parent="AudioListener2D"]
stream = ExtResource("3_3m77j")
autoplay = true
max_polyphony = 11

[node name="heroAni" type="AnimatedSprite2D" parent="."]
position = Vector2(361, 265)
sprite_frames = SubResource("SpriteFrames_fglmq")
animation = &"womanFashi"

[node name="palayGame" type="Button" parent="."]
offset_left = 590.0
offset_top = 456.0
offset_right = 718.0
offset_bottom = 517.0

[node name="Sprite2D" type="Sprite2D" parent="palayGame"]
position = Vector2(66, 25)
scale = Vector2(2.97727, 2.18453)
texture = ExtResource("20_u4jf8")

[node name="creatHero" type="Button" parent="."]
offset_left = 518.0
offset_top = 491.0
offset_right = 791.0
offset_bottom = 570.0

[node name="Sprite2D" type="Sprite2D" parent="creatHero"]
position = Vector2(143, 39)
scale = Vector2(2.3, 2.18453)
texture = ExtResource("21_523rx")

[node name="newHero" type="Sprite2D" parent="."]
position = Vector2(953.5, 225)
scale = Vector2(1.79667, 1)
texture = ExtResource("22_c0wi2")

[node name="submit" type="Sprite2D" parent="newHero"]
position = Vector2(-8.0705, 167)
scale = Vector2(0.966702, 1)
texture = ExtResource("27_r03du")

[node name="Button" type="Button" parent="newHero/submit"]
offset_left = -40.0
offset_top = -19.0
offset_right = 40.0
offset_bottom = 31.0

[node name="heroName" type="LineEdit" parent="newHero"]
offset_left = -87.0
offset_top = -113.0
offset_right = 72.0
offset_bottom = -82.0

[node name="zhanshi" type="Sprite2D" parent="newHero"]
position = Vector2(-80.9833, -31)
texture = ExtResource("23_6jd4e")

[node name="zhanshi" type="Button" parent="newHero/zhanshi"]
offset_left = -21.0
offset_top = -21.0
offset_right = 23.0
offset_bottom = 24.0

[node name="fashi" type="Sprite2D" parent="newHero"]
position = Vector2(-35.8998, -33)

[node name="fashi" type="Button" parent="newHero/fashi"]
offset_left = -25.0
offset_top = -16.0
offset_right = 24.0
offset_bottom = 24.0

[node name="daoshi" type="Sprite2D" parent="newHero"]
position = Vector2(9.74023, -30)
texture = ExtResource("25_pqr1a")

[node name="daoshi" type="Button" parent="newHero/daoshi"]
offset_left = -19.0
offset_top = -24.0
offset_right = 25.0
offset_bottom = 24.0

[node name="sex" type="Sprite2D" parent="newHero"]
position = Vector2(-38.1262, 41)
scale = Vector2(0.885478, 1)
texture = ExtResource("26_6wny2")

[node name="checkMan" type="Button" parent="newHero/sex"]
offset_left = -21.0
offset_top = -18.0
offset_right = 28.0
offset_bottom = 18.0

[node name="sex2" type="Sprite2D" parent="newHero"]
position = Vector2(-38.1262, 41)
scale = Vector2(0.885478, 1)
texture = ExtResource("26_6wny2")

[node name="checkWOman" type="Button" parent="newHero/sex2"]
offset_left = 30.1714
offset_top = -19.0
offset_right = 79.1714
offset_bottom = 17.0

[connection signal="pressed" from="palayGame" to="." method="cheacS"]
[connection signal="pressed" from="creatHero" to="." method="creatHero"]
[connection signal="pressed" from="newHero/submit/Button" to="." method="submit"]
[connection signal="pressed" from="newHero/zhanshi/zhanshi" to="." method="cheakZhanshi"]
[connection signal="pressed" from="newHero/fashi/fashi" to="." method="cheakFashi"]
[connection signal="pressed" from="newHero/daoshi/daoshi" to="." method="cheakDaoshi"]
[connection signal="pressed" from="newHero/sex/checkMan" to="." method="_on_check_man_pressed"]
[connection signal="pressed" from="newHero/sex2/checkWOman" to="." method="_on_check_w_oman_pressed"]
